# task-api

./: LICENSE  README.md  docker-compose.yml  pyproject.toml  testing.env
alembic/: env.py
alembic/versions/: 94c9b7538a3c_add_tasks_and_task_logs.py
task_api/: app.py  config.py  database.py  models.py  modelschemas.py  tasks.py
task_api/routers/: task_logs.py  tasks.py
tests/: conftest.py  test_tasks.py
